--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+#spring.profiles.active=production
+
 spring.application.name=config-server
 server.port=8888
 
 #spring.cloud.config.server.git.uri=file://eclipe/spring-config/
-spring.cloud.config.server.git.uri=https://github.com/chuchip/servercloudconfig.git
+#spring.cloud.config.server.git.uri=https://github.com/chuchip/servercloudconfig.git
+spring.cloud.config.server.git.uri=https://github.com/patzu/servercloudconfig.git
